# LineLM

./: LICENSE  README.md  fine_tune_large.py  inference_on_patch_large_model.py  inference_on_patch_large_model_multiprocess.py  iterative_inference.py  pretrain_bert_large.py  pyproject.toml  remove_dangling_lines_on_map.py  stitch_lines_on_map.py  utils.py
model/: bert.py  bert_pretrain.py  dataloader.py  dataloader4inference.py  dataloader_mlm.py
preprocess/: generate_single_lines_for_inference_iter0.py  generate_single_lines_for_iterative_inference.py
process_data/: conflate_lines_on_patch.py  merge_lines.py  multiline_to_line_postprocess.py  multiline_to_trajectory.py  spatial_constraint_operators.py  stitch_lines_helpers.py  transform_and_buffer_line.py
